# labos

./: .gitignore  .renderignore  COMMIT_MESSAGE.md  DEPARTMENT_CATEGORY_MANAGEMENT.md  DUAL_VERSION_GUIDE.md  EXPENSE_SUBMISSION_FEATURE.md  FRONTEND_BUGFIXES.md  FRONTEND_SETUP.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PROGRESS_UPDATE.md  PROJECT_STRUCTURE.md  Procfile  QUICK_START.md  READY_TO_USE.md  RENDER_DEPLOYMENT.md  Updated_actions_full_v2.xlsx  add_external_accounting_fields.sql  app.py  build-frontend.sh  build.sh  check-status.sh  config.py  cookies.txt  delete_all_expenses.py  dev.sh  filtered_open_tasks.xlsx  forms.py  grant_accounting_role.py  grant_accounting_role.sql  inspect_db.py  load_suppliers.py  migrate_db.py  migrate_purchase_to_invoice_date.py  models.py  models.py.bak  pyproject.toml  render.yaml  reproduce_ocr.py  requirements.txt  (+4 more)
dashboards/: admin_dash.py
frontend/: COMPONENT_QUICK_REFERENCE.md  README.md  UX_IMPROVEMENTS.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
instance/: database.db  expenses.db
migrations/: add_payment_method.py
routes/: expense.py
services/: document_processor.py  exchange_rate.py  grow_webhook.py  manager_access.py
ssl/: cert.pem  key.pem
static/: style.css
templates/: accounting_dashboard.html  add_supplier.html  admin_dashboard.html  admin_edit_expense.html  base.html  change_password.html  edit_expense.html  email_templates.py  employee_dashboard.html  expense_history.html  index.html  login.html  manage_budgets.html  manage_categories.html  manage_credit_cards.html  manage_departments.html  manage_suppliers.html  (+5 more)
(+150 files in other folders)
