[tool.poetry]
name = "labos-expense-management"
version = "1.0.0"
description = "Labos Expense Management System"
authors = ["Labos Team"]
package-mode = false



[tool.poetry.dependencies]
python = "^3.13"
flask = {extras = ["async"], version = "^3.1.2"}
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-migrate = "^4.1.0"
flask-cors = "^6.0.2"
werkzeug = "^3.1.5"
gunicorn = "^23.0.0"
pytz = "^2025.2"
azure-ai-formrecognizer = "^3.3.3"
python-dotenv = "^1.2.1"
pandas = "^2.3.3"
xlsxwriter = "^3.2.9"
psycopg2-binary = "^2.9.11"
dash = "^3.3.0"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-bootstrap-components = "^2.0.4"
plotly = "^6.5.2"
flask-wtf = "^1.2.2"
msal = "^1.34.0"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

